<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.cnr.isti.hpclab</groupId>
    <artifactId>terrier-micro</artifactId>
    <version>1.5.1</version>
    <packaging>jar</packaging>
    <name>Terrier 5 Lightweight Matching</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <license.inceptionYear>2019</license.inceptionYear>
    <license.organizationName>Nicola Tonellotto</license.organizationName>
  </properties>

  <licenses>
    <license>
      <name>GNU Lesser General Public License</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>manual</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>khast</id>
      <email>nicola.tonellotto@isti.cnr.it</email>
      <name>Nicola Tonellotto</name>
    </developer>
  </developers>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>

    <dependency>
      <groupId>it.unimi.dsi</groupId>
      <artifactId>fastutil</artifactId>
      <version>8.2.2</version>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>26.0-jre</version>
    </dependency>
<!--
    <dependency>
      <groupId>it.cnr.isti.hpclab</groupId>
      <artifactId>terrier-eliasfano</artifactId>
      <version>1.5.1</version>
      <optional>true</optional>
    </dependency>
-->
    <dependency>
      <groupId>com.github.tonellotto</groupId>
      <artifactId>terrier-ef</artifactId>
      <version>v1.5.1</version>
    </dependency>

    <dependency>
      <groupId>org.terrier</groupId>
      <artifactId>terrier-core</artifactId>
      <version>5.1</version>
    </dependency>

    <dependency>
      <groupId>org.terrier</groupId>
      <artifactId>terrier-batch-indexers</artifactId>
      <version>5.1</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>1.10</version>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>

    <dependency>
      <groupId>args4j</groupId>
      <artifactId>args4j</artifactId>
      <version>2.33</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.4</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.6.2</version>
    </dependency>

  </dependencies>

  <build>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <source>${maven.compiler.target}</source>
          <target>${maven.compiler.source}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.10</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>true</downloadJavadocs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>appassembler-maven-plugin</artifactId>
        <version>1.10</version>
        <configuration>
          <assembleDirectory>${project.build.directory}</assembleDirectory>
            <extraJvmArguments>-Xms1G -Xmx50G -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</extraJvmArguments>
            <platforms>unix</platforms>
            <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
            <programs>
              <program>
                <mainClass>it.cnr.isti.hpclab.maxscore.MSGenerator</mainClass>
                <name>ms-generate</name>
              </program>
              <program>
                <mainClass>it.cnr.isti.hpclab.maxscore.BMWGenerator</mainClass>
                <name>bmw-generate</name>
              </program>
              <program>
                <mainClass>it.cnr.isti.hpclab.Retrieve</mainClass>
                <name>retrieve</name>
              </program>
              <program>
                <mainClass>it.cnr.isti.hpclab.parallel.ParallelRetrieve</mainClass>
                <name>parallel-retrieve</name>
              </program>
            </programs>
        </configuration>
        <executions>
            <execution>
                <id>assemble</id>
                <goals>
                    <goal>assemble</goal>
                </goals>
            </execution>
        </executions>
      </plugin>

    </plugins>

  </build>

</project>
